# asset-packer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
cmake/: Flags.cmake
src/: main.c  version.h.in
src/core/: args.c  args.h  prepare.c  prepare.h
tests/: test_all.c  test_python.py
